WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277002
REGRESSION(
281282@main
): Broke internal ASAN builds
https://bugs.webkit.org/show_bug.cgi?id=277002
Summary
REGRESSION(281282@main): Broke internal ASAN builds
Abrar Rahman Protyasha
Reported
2024-07-24 08:16:56 PDT
rdar://132404291
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2024-07-24 08:21:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31156
EWS
Comment 2
2024-07-24 08:27:43 PDT
Committed
281297@main
(a2a460fb78ba): <
https://commits.webkit.org/281297@main
> Reviewed commits have been landed. Closing PR #31156 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug