REGRESSION (281282@main) Broke ASAN builds https://bugs.webkit.org/show_bug.cgi?id=277002 rdar://132404291

Unreviewed build fix.

Fix the build by defining `convertUp<T>` in the UnifiedPDFPlugin.h
header file, so that it's immediately available for all TUs without
needing to explicitly instantiate for specific types.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.h:
(WebKit::UnifiedPDFPlugin::convertUp const):
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::convertUp const): Deleted.

Canonical link: https://commits.webkit.org/281297@main